--- a/Views/Usuarios/Cadastro.cshtml
+++ b/Views/Usuarios/Cadastro.cshtml
@@ -26,7 +26,7 @@
 
     <div class="container-login">
         <div class="card-login">
-            <h2>CADASTRO DE USUÁRIO</h2>
+            <h3>CADASTRO DE USUÁRIO</h3>
             @if (TempData["Error"] != null) 
             {
                 <div class="alert alert-danger" role="alert">
@@ -50,11 +50,11 @@
                 <input type="password" id="senha" name="senha" required />
 
                 <label for="nivel_acesso">Nível de Acesso</label>
-                <select id="nivel_acesso" name="nivel_acesso" required>
+                <select id="nivel_acesso" style="width: 400px" name="nivel_acesso" required>
                     <option value="usuario">Usuário</option>
                 </select>
 
-                <p style="margin-top: 10px; font-size: 12px;">*Campos de preenchimento obrigatório</p>
+                <p style="margin-top: 10px; font-size: 14px; font-weight: 500; font-style: italic; color: #F33E33;">*Campos de preenchimento obrigatório</p>
 
                 <button type="submit">CADASTRAR</button>
             </form>
