--- a/Views/Usuarios/Login.cshtml
+++ b/Views/Usuarios/Login.cshtml
@@ -49,7 +49,7 @@
                 <label for="senha">Senha*:</label>
                 <input type="password" id="senha" name="senha" required />
 
-                <p style="margin-top: 10px; font-size: 12px;">*Campos de preenchimento obrigatório</p>
+                <p style="margin-top: 10px; font-size: 14px; font-weight: 500; font-style: italic; color: #F33E33;">*Campos de preenchimento obrigatório</p>
 
                 <button type="submit">ACESSAR</button>
             </form>
