--- a/Views/Produtos/Index.cshtml
+++ b/Views/Produtos/Index.cshtml
@@ -43,9 +43,17 @@
         <h1 class="cadastro-titulo">LISTA DE PRODUTOS</h1>
     </div>
 
+    @if (TempData["ProdutoExcluido"] != null)
+    {
+        <div
+            style="background: #FFC62980; color: black; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 5px solid #FF7C2C;">
+            @TempData["ProdutoExcluido"]
+        </div>
+    }
+
     @if (TempData["MensagemSucesso"] != null)
     {
-        <div class="alert alert-success text-center">
+        <div style="background: #FFC62980; color: black; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 5px solid #FF7C2C;">
             @TempData["MensagemSucesso"]
         </div>
     }
