Ajustes finais nas estilização dos botões em diversas telas e alguns espaçamentos entre formulários, contêineres e botões. Criação do botão para acessar a Lista de Produtos através da tela de Relatórios, padronizando a tela de lista de produtos, possibilitando a impressão ou salvar a lista em pdf através da inclusão dos botões de ação rápida ao final da tela. Configuração para garantir acesso sob autenticação em todas as telas. Correção do botão sair do rodapé com logout e desenvolvimento da caixa de usuário e botão de logout no cabeçalho, após diversos testes na tela de cadastro de produto

--- a/Views/Produtos/Delete.cshtml
+++ b/Views/Produtos/Delete.cshtml
@@ -115,11 +115,11 @@
         <input type="hidden" asp-for="Id" />
 
         <div class="linha linha-botoes-horizontal">
-            <button type="submit" class="btn-cadastrar-produto btn-danger">
+            <button type="submit" class="btn-cadastrar-produto">
                 EXCLUIR
             </button>
 
-            <a href="@Url.Action("Index")" class="btn-cadastrar-produto btn-secundario">
+            <a href="@Url.Action("Index")" class="btn-cadastrar-produto">
                 CANCELAR
             </a>
         </div>
