--- a/Views/Relatorios/Index.cshtml
+++ b/Views/Relatorios/Index.cshtml
@@ -109,6 +109,7 @@
     <div style="display: flex; justify-content: center; gap: 20px; margin-top: 0; flex-wrap: wrap;">
         <a href="@Url.Action("Resultados", "Estoque")" class="painel-link">📦 ESTOQUE ATUAL</a>
         <a href="@Url.Action("Index", "Movimentacoes")" class="painel-link">➕ MOVIMENTAÇÕES</a>
+        <a href="@Url.Action("Index", "Produtos")" class="painel-link">📄 LISTA DE PRODUTOS</a>
         <a href="@Url.Action("Menu", "Home")" class="painel-link">🏠 MENU PRINCIPAL</a>
     </div>
 
