--- a/Views/Produtos/Create.cshtml
+++ b/Views/Produtos/Create.cshtml
@@ -27,33 +27,33 @@
 <body class="Cadastro de Produto">
 
     <!-- Cabeçalho -->
-<header class="header">
-    <div class="logo">
-        <a asp-controller="Home" asp-action="Menu" title="Voltar ao Menu">
-            <img src="~/images/logo.jpg" alt="Logo PapelArt - Voltar ao Menu" />
-        </a>
-    </div>
-
-    <div class="titulo">
-        <h1>PapelArt - Material Escolar</h1>
-        <h1>SISTEMA DE CONTROLE DE ESTOQUE</h1>
-    </div>
-
-    @if (User.Identity != null && User.Identity.IsAuthenticated)
-    {
-        <div class="usuario-logado-box">
-            <span class="usuario-logado-nome">
-                Usuário: @User.Identity.Name
-            </span>
-    
-            <form asp-controller="Usuarios" asp-action="Logout" method="post">
-                <button type="submit" class="btn-logout-header">
-                    Sair
-                </button>
-            </form>
+    <header class="header">
+        <div class="logo">
+            <a asp-controller="Home" asp-action="Menu" title="Voltar ao Menu">
+                <img src="~/images/logo.jpg" alt="Logo PapelArt - Voltar ao Menu" />
+            </a>
         </div>
-    }
-</header>
+
+        <div class="titulo">
+            <h1>PapelArt - Material Escolar</h1>
+            <h1>SISTEMA DE CONTROLE DE ESTOQUE</h1>
+        </div>
+
+        @if (User.Identity != null && User.Identity.IsAuthenticated)
+        {
+            <div class="usuario-logado-box">
+                <span class="usuario-logado-nome">
+                    Usuário: @User.Identity.Name
+                </span>
+
+                <form asp-controller="Usuarios" asp-action="Logout" method="post">
+                    <button type="submit" class="btn-logout-header">
+                        Sair
+                    </button>
+                </form>
+            </div>
+        }
+    </header>
 
 
     <div style="container-titulo">
@@ -82,13 +82,13 @@
                 <!-- DESCRIÇÃO -->
                 <div class="linha">
                     <label>DESCRIÇÃO*:</label>
-                    <input type="text" asp-for="Descricao" class="form-control" required/>
+                    <input type="text" asp-for="Descricao" class="form-control" required />
                 </div>
 
                 <!-- PREÇO -->
                 <div class="linha">
                     <label>VALOR UNITÁRIO*:</label>
-                    <input type="number" step="0.01" asp-for="Preco" class="form-control" required/>
+                    <input type="number" step="0.01" asp-for="Preco" class="form-control" required />
                 </div>
 
                 <!-- CATEGORIA -->
@@ -146,14 +146,13 @@
     <footer class="menu-footer">
         <a href="javascript:history.back()" class="footer-btn">&#8678 VOLTAR</a>
         @using (Html.BeginForm("Logout", "Usuarios", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-    <a href="javascript:document.forms[0].submit();" 
-       class="footer-btn" 
-       onclick="return confirm('Deseja realmente sair?')">
-       SAIR &#8680
-    </a>
-}
+        {
+            @Html.AntiForgeryToken()
+            <a href="javascript:document.forms[0].submit();" class="footer-btn"
+                onclick="return confirm('Deseja realmente sair?')">
+                SAIR &#8680
+            </a>
+        }
 
     </footer>
 
