--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -119,7 +119,7 @@ footer {
     border: none;
     padding: 6px 12px;
     border-radius: 12px;
-    background: linear-gradient(180deg, #FFC629, #FF7C2C);
+    background: linear-gradient(180deg, #F33E33, #FF7C2C);
     color: #fff;
     font-weight: 700;
     font-size: 12px;
