--- a/wwwroot/css/menu.css
+++ b/wwwroot/css/menu.css
@@ -4,8 +4,8 @@
     font-size: 3vw;
     font-weight: 800;
     text-align: center;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-top: 10px;
+    margin-bottom: 14px;
 
     background: linear-gradient(180deg, #FF7C2C 60%, #F33E33 100%);
     -webkit-background-clip: text;
@@ -13,6 +13,21 @@
     color: transparent;
     text-shadow: 0px 3px 1px white;
 }
+
+
+.bemvindo-titulo {
+  text-align: center;
+  font-size: 18px;
+  align-self: center;
+  font-weight: 600;
+  width: 400px;
+  margin-top: 40px;
+  margin-bottom: 0;
+  color:#F33E33;
+  background: rgba(255,255,255,0.7);
+  border-radius: 8px;
+}
+
 
 /* ======== CONTAINER PRINCIPAL ======== */
 .menu-wrapper {
